Fix story card spacing when filtered by topic

--- a/app/assets/stylesheets/_stories.scss
+++ b/app/assets/stylesheets/_stories.scss
@@ -359,12 +359,13 @@ h1.section-heading {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
+      width: 100vw;
 
       .story-card {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        margin: 0 0.1rem 2.5rem 0.1rem;
+        margin: 0 0.5rem 2.5rem 0.5rem;
         max-width: 28rem;
         min-width: 15rem;
         box-shadow: 0 0 16px #ccc;
